# Valkyrie

./: .gitignore  .replit  DEPLOY.md  LIGHT_MODE_GUIDE.md  LOGO.md  README.md  RUN.md  context.md  pyproject.toml  render.yaml  replit.md  rtrvr.md  setup-and-run.sh  start.sh
.temp/: TESTING_MECHANISM.md
attached_assets/: Pasted-I-want-you-to-build-a-full-stack-SaaS-web-app-called-LL_1765598401322.txt
backend/: ai_testing_engine.py  api_discovery_engine.py  api_security_engine.py  attack_engine.py  browser_recon_engine.py  database.py  fuzzing_engine.py  llm_auditor.db-shm  llm_auditor.db-wal  main.py  migrate.py  models.py  network_testing_engine.py  report_generator.py  requirements.txt  schemas.py  sqli_engine.py  testing_utils.py  unauth_vuln_engine.py  xss_engine.py
backend/logs/: README.md
frontend/: .env.development  .env.production  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: APITestForm.tsx  Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Modal.tsx  Table.tsx
frontend/src/config/: api.ts
frontend/src/contexts/: ThemeContext.tsx
frontend/src/layouts/: AppLayout.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: APITestDetail.tsx  APITesting.tsx  Dashboard.tsx  Landing.tsx  Login.tsx  Monitoring.tsx  ProjectDetail.tsx  Projects.tsx  ReportDetail.tsx  Reports.tsx  Settings.tsx  TestRunDetail.tsx
frontend/src/services/: apiTestService.ts
